# whispem-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  vision.md
compiler/: wsc.whbc  wsc.wsp
docs/: examples.md  journey.md  syntax.md  tutorial.md  vision.md  vm.md
examples/: README.md  arithmetic.wsp  array_advanced.wsp  array_basic.wsp  array_build_dynamic.wsp  array_functions.wsp  array_iteration.wsp  array_mixed_types.wsp  array_with_functions.wsp  boolean.wsp  break_continue.wsp  closure_adder.wsp  closure_counter.wsp  closure_nested.wsp  closure_pair.wsp  comments.wsp  comparison.wsp  condition.wsp  countdown.wsp  data_processing.wsp  dict_basic.wsp  dict_nested.wsp  dict_phonebook.wsp  dict_word_count.wsp  file_io.wsp  filter_basic.wsp  fizzbuzz.wsp  fizzbuzz_proper.wsp  for_loop.wsp  fstrings.wsp  function_basic.wsp  function_no_params.wsp  function_recursive.wsp  function_return.wsp  hello.wsp  higher_order.wsp  higher_order_v6.wsp  interactive_game.wsp  lambda_basic.wsp  logical_operators.wsp  (+13 more)
src/: ast.rs  chunk.rs  compiler.rs  error.rs  interpreter.rs  lexer.rs  main.rs  opcode.rs  parser.rs  repl.rs  token.rs  value.rs  vm.rs
tests/: run_tests.sh  test_v0.7.0.wsp  test_v0.8.0.wsp  test_v0.9.0.wsp  test_v1.0.0.wsp  test_v1.5.0.wsp  test_v2.0.0.wsp  test_v2.5.0.wsp  test_v3.0.0.wsp  test_v4.0.0.wsp  test_v5.0.0.wsp
tests/expected/: arithmetic.txt  array_advanced.txt  array_basic.txt  array_build_dynamic.txt  array_functions.txt  array_iteration.txt  array_mixed_types.txt  array_with_functions.txt  comparison.txt  (+38 more)
vm/: wvm  wvm.c
