[package]
name = "whispem"
version = "0.7.0"
edition = "2021"
authors = ["Emilie PERETTI"]
description = "A minimalist interpreted programming language designed for clarity and calm readability"
license = "MIT"
repository = "https://github.com/whispem/whispem-lang"
keywords = ["interpreter", "language", "minimalist", "educational"]
categories = ["compilers"]

[dependencies]
